corrected main tex file and pdj
Page numbers were off originally

--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -740,8 +740,7 @@ Source/Destination &
 \end{supertabular}
 \end{flushleft}
 
-\clearpage\setcounter{page}{1}\pagestyle{Convertiv}
-\section[NONFUNCTIONAL REQUIREMENTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+\clearpage\section[NONFUNCTIONAL REQUIREMENTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 NONFUNCTIONAL REQUIREMENTS}
 {\selectlanguage{english}\rmfamily\color{black}
 
@@ -760,8 +759,7 @@ The biggest goal here is that the tablet application is extremely user friendly.
 \subsection{BUSINESS ROLES}
 Any user with access to the tablet application can do browsing and searching for information on the wells, septic systems and restaurants. All of this information is public. However, only a registered administrator is allowed to access the form entry and delayed upload features. They are the sole owners of the ability to add new information.}
 
-\clearpage\setcounter{page}{1}\pagestyle{Convertv}
-\section[FUNCTIONAL REQUIREMENTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+\clearpage\section[FUNCTIONAL REQUIREMENTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 FUNCTIONAL REQUIREMENTS}
 \subsection[USE CASES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 USE CASES}
@@ -959,8 +957,7 @@ Main Scenario
 \end{supertabular}
 \end{flushleft}
 
-\clearpage\setcounter{page}{1}\pagestyle{Convertvi}
-\section[TEST PLAN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+\clearpage\section[TEST PLAN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 TEST PLAN}
 
 \subsection{OBJECTIVES}
@@ -977,7 +974,7 @@ TEST PLAN}
 }
 
 
-\section{FUTURE EXTENSIONS}
+\clearpage\section{FUTURE EXTENSIONS}
 \begin{itemize}
 \item{User Voice Interface}
 \item{Expand location}
@@ -990,8 +987,7 @@ Search and browse functions in the software currently supports keypad and mouse/
 Software can be extended to possibly include full support as a smartwatch application. 
 Software currently supports Android OS.  It can support other operating systems in the future.}
 
-\clearpage\setcounter{page}{1}\pagestyle{Convertvii}
-\section[APPENDIX A. \ Example Screens]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+\clearpage\section[APPENDIX A. \ Example Screens]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 APPENDIX A. \ Example Screens}
 
 \bigskip
@@ -1006,8 +1002,7 @@ derived from the customer. \ Appendices are labeled A, B, {\dots}n.
 \foreignlanguage{english}{\ }\foreignlanguage{english}{[ insert appendix
 A here ]}}
 
-\clearpage\setcounter{page}{1}\pagestyle{Convertviii}
-\section[APPENDIX B. \ [insert name
+\clearpage\section[APPENDIX B. \ [insert name
 here{]}]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 APPENDIX B. \ [insert name here]}
 
