Changes to Formatting and Test Plan

--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -8,6 +8,7 @@
 \usepackage{amssymb,amsfonts,textcomp}
 \usepackage{color}
 \usepackage{array}
+\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
 \usepackage{supertabular}
 \usepackage{hhline}
 \usepackage{hyperref}
@@ -431,315 +432,6 @@ The application will be able to wirelessly sync with the database.
 \subsubsection{USB Communication}
 The application will be able to sync through a usb cable with the database.}
 
-\newpage
-
-\bigskip
-
-\begin{flushleft}
-\tablehead{}
-\begin{supertabular}{|m{0.7337598in}|m{1.4212599in}|m{2.7337599in}|m{1.0462599in}|m{1.4837599in}|m{1.1087599in}m{-0.054440156in}|}
-\multicolumn{6}{m{8.92126in}}{\centering
-{\selectlanguage{english}\bfseries\color{black} External Interface
-Requirements}\par
-
-~
-
-\centering \selectlanguage{english}\bfseries\color{black} Hardware
-Interfaces} &
-\multicolumn{1}{m{-0.054440156in}}{~
-}\\\hline
-\centering \selectlanguage{english}\bfseries\color{black} Name &
-\centering \selectlanguage{english}\bfseries\color{black}
-Source/Destination &
-\centering \selectlanguage{english}\bfseries\color{black} Description &
-\centering \selectlanguage{english}\bfseries\color{black} Type/range &
-\centering \selectlanguage{english}\bfseries\color{black} Dependencies &
-\multicolumn{2}{m{1.1330599in}|}{\centering
-\selectlanguage{english}\bfseries\color{black} Formats}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-\multicolumn{6}{m{8.92126in}}{~
-\centering \selectlanguage{english}\bfseries\color{black} Software
-Interfaces} &
-\multicolumn{1}{m{-0.054440156in}}{~
-}\\\hline
-\centering \selectlanguage{english}\bfseries\color{black} Name &
-\centering \selectlanguage{english}\bfseries\color{black}
-Source/Destination &
-\centering \selectlanguage{english}\bfseries\color{black} Description &
-\centering \selectlanguage{english}\bfseries\color{black} Type/range &
-\centering \selectlanguage{english}\bfseries\color{black} Dependencies &
-\multicolumn{2}{m{1.1330599in}|}{\centering
-\selectlanguage{english}\bfseries\color{black} Formats}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-\multicolumn{6}{m{8.92126in}}{~
-
-\centering \selectlanguage{english}\bfseries\color{black} User
-Interfaces} &
-\multicolumn{1}{m{-0.054440156in}}{~
-}\\\hline
-\centering \selectlanguage{english}\bfseries\color{black} Name &
-\centering \selectlanguage{english}\bfseries\color{black}
-Source/Destination &
-\centering \selectlanguage{english}\bfseries\color{black} Description &
-\centering \selectlanguage{english}\bfseries\color{black} Type/range &
-\centering \selectlanguage{english}\bfseries\color{black} Dependencies &
-\multicolumn{2}{m{1.1330599in}|}{\centering
-\selectlanguage{english}\bfseries\color{black} Formats}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-\multicolumn{6}{m{8.92126in}}{~
-
-\centering \selectlanguage{english}\bfseries\color{black} Other
-Communication Interfaces} &
-\multicolumn{1}{m{-0.054440156in}}{~
-}\\\hline
-\centering \selectlanguage{english}\bfseries\color{black} Name &
-\centering \selectlanguage{english}\bfseries\color{black}
-Source/Destination &
-\centering \selectlanguage{english}\bfseries\color{black} Description &
-\centering \selectlanguage{english}\bfseries\color{black} Type/range &
-\centering \selectlanguage{english}\bfseries\color{black} Dependencies &
-\multicolumn{2}{m{1.1330599in}|}{\centering
-\selectlanguage{english}\bfseries\color{black} Formats}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-~
- &
-~
- &
-~
- &
-~
- &
-~
- &
-\multicolumn{2}{m{1.1330599in}|}{~
-}\\\hline
-\end{supertabular}
-\end{flushleft}
-
 \clearpage\section[NONFUNCTIONAL REQUIREMENTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 NONFUNCTIONAL REQUIREMENTS}
 {\selectlanguage{english}\rmfamily\color{black}
@@ -761,9 +453,8 @@ Any user with access to the tablet application can do browsing and searching for
 
 \clearpage\section[FUNCTIONAL REQUIREMENTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 FUNCTIONAL REQUIREMENTS}
-\subsection[USE CASES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-USE CASES}
-\subsubsection{Data Entry (Forms)}
+\subsection[DATA ENTRY (FORMS)]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+DATA ENTRY (FORMS)}
 
 \subsubsection{\textit{Use Case 1}}
 
@@ -911,7 +602,9 @@ USE CASES}
 \end{enumerate}
 \end{enumerate}
 
-\subsubsection{Browsing \& Search}
+\subsection[BROWSING \& SEARCH]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+BROWSING \& SEARCH}
+
 \subsubsection{\textit{Use Case 1}}
 
 \textit{Title: }{\selectlanguage{english}\bfseries\color{black} Search for prior inspection report}
@@ -959,8 +652,9 @@ USE CASES}
 \end{enumerate}
 \end{enumerate}
 
-\subsubsection{Delayed Upload}
-
+\subsection[DELAYED UPLOAD]
+{\selectlanguage{english}\rmfamily\bfseries\color{black}
+DELAYED UPLOAD}
 \subsubsection{\textit{Use Case 1}}
 
 \textit{Title: }{\selectlanguage{english}\bfseries\color{black}User attempts to upload a specific piece of form data.}
@@ -1116,6 +810,9 @@ specifies which fields in the form data are unacceptable and asks that they be f
 \end{enumerate}
 \end{enumerate}
 
+%\clearpage\section[DATA MODELING]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+%DATA MODELING}
+
 \clearpage\section[TEST PLAN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 TEST PLAN}
 
@@ -1132,6 +829,82 @@ TEST PLAN}
        Testing for this section will be conducted throughout the development life cycle of the product.
 }
 
+\subsection{FEATURES TO BE TESTED}
+{\selectlanguage{english}\rmfamily\color{black}
+Test cases will cover all the features of the software covered in the SRS.  It will include the exception cases in the use cases so as to ensure that the product behaves in the anticipated manner.
+}
+
+\begin{center}
+\begin{tabular}{ | M{1.5cm} | M{1.75cm}| M{13cm} |} 
+\hline
+\textbf{TEST ID} & \textbf{SRS \ Document \ Reference} & \textbf{Features to be Tested (Test Description)}\\ 
+\hline
+001 & 3.1a & Validate the data entry form feature for septic tanks. Tests cases will ensure that the user is able to input and upload the form in the expected manner.  Test cases will also test for exceptions: 1) User misses a required  entry, 2) User inputs invalid entry 3) System shutdown during data upload.\\ 
+\hline
+002 & 3.1b & Validate the data entry form feature for water well. Tests cases will ensure that the user is able to input and upload the form in the expected manner.  Test cases will also test for exceptions: 1) User misses a required  entry, 2) User inputs invalid entry 3) System shutdown during data upload. \\ 
+\hline
+003 & 3.1c & Validate the data entry form feature for restaurant inspections. Tests cases will ensure that the user is able to input and upload the form in the expected manner.  Test cases will also test for exceptions: 1) User misses a required  entry, 2) User inputs invalid entry 3) System shutdown during data upload. \\ 
+\hline
+004 & 3.2 & Validate the browsing and search functions. Test cases will include scenarios for software not able to connect to database and search query yielding no results.\\ 
+\hline
+005 & 3.3a & Validate the delayed upload feature for specific form selected by user.  Test cases will include tests for exceptional scenarios covered in SRS to ensure that the software behaves in an expected manner.\\ 
+\hline
+006 & 3.3b & Validate the batch delayed upload feature.  Test cases will include tests for exceptional scenarios covered in SRS to ensure that the software behaves in an expected manner.\\ 
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{APPROACH}
+
+\begin{center}
+\begin{tabular}{ | M{4cm} | M{12cm}| } 
+\hline
+\textbf{Component Testing} & Individuals will test the components they are working on during the software development cycle.\\ 
+\hline
+\textbf{Integration Testing} & A detailed set of tests cases will be created and then executed.  These test cases will cover all the requirements detailed in the SRS.\\ 
+\hline
+\textbf{Interface Testing} & To ensure that all aspects of the display are rendered correctly, the external interfaces regarding data entry forms and browsing and searching will be tested manually by using the user interface to perform all product tasks.\\ 
+\hline
+\textbf{Security Testing} & Security of the software will be tested by making attempts to access the data without proper authentication.\\ 
+\hline
+\textbf{Performance Testing} & Test users will interact with the system to ensure that the system and its search and browsing utility respond in a reasonable time.\\ 
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{PASS/FAIL CRITERIA}
+\begin{center}
+\begin{tabular}{ | M{4cm} | M{12cm}| } 
+\hline
+\textbf{Suspension Criteria} & Test case execution will be suspended in the event of discovery of a critical failure that affects the value of the tests.\\ 
+\hline
+\textbf{Resumption Criteria} & Once the developer thinks the problem causing the suspension has been resolved, test case may resume.\\ 
+\hline
+\textbf{Approval Criteria} & The results for each test case will be considered approved if the results meet the expected results description in the test case.\\ 
+\hline
+\end{tabular}
+\end{center}
+
+\subsection{SCHEDULE}
+{\selectlanguage{english}\rmfamily\color{black}
+\begin{center}
+\begin{tabular}{ | M{5cm} | M{5cm}| } 
+\hline
+\textbf{Task} & \textbf{Week Performed}\\ 
+\hline
+Develop test cases & 6 \\ 
+\hline
+Develop scripts for automated testing & 4 \\ 
+\hline
+Execute tests & 8 \\ 
+\hline
+Report defects & 6 \\ 
+\hline
+Complete test report & 8 \\ 
+\hline
+\end{tabular}
+\end{center}
+}
 
 \clearpage\section{FUTURE EXTENSIONS}
 \begin{itemize}
